fixed GMT time zone bug

--- a/src/index.html
+++ b/src/index.html
@@ -217,6 +217,8 @@
             // Update the countdown every second
             var countdownInterval = setInterval(function () {
                 var now = new Date().getTime();
+                // convert to GMT-05:00 for EST
+                now = now - (5 * 60 * 60 * 1000);
                 var distance = departureTime - now;
                 var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
                 var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
